--- a/components/waterTower/waterTower.html
+++ b/components/waterTower/waterTower.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section>
-            <svg id="watertower-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 566.99 1829.19">
+            <svg id="watertower-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -200 566.99 2029.19"> <!-- original viewbox: 0 0 566.99 1829.19 -->
               <defs>
                 <clipPath id="clip-path">
                   <path class="cls-1" d="M538,977.62c0,64.69-70.78,104-126.12,117.12-46.21,11-64.44,13-127.88,13s-81.67-2-127.88-13C100.8,1081.61,30,1042.31,30,977.62V318.89c0-64.68,70.78-104,126.12-117.12,46.21-11,64.44-13,127.88-13s81.67,2,127.88,13C467.24,214.91,538,254.21,538,318.89Z"/>
