--- a/components/map/map.html
+++ b/components/map/map.html
@@ -77,7 +77,7 @@
         </section>
     </main>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script type="text/javascript" src="javascript/main.js"></script>
+    <script type="text/javascript" src="javascript/map.js"></script>
 </body>
 
 </html>
