--- a/components/waterTower/waterTower.html
+++ b/components/waterTower/waterTower.html
@@ -169,7 +169,7 @@
         </section>
     </main>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script type="text/javascript" src="javascript/main.js"></script>
+    <script type="text/javascript" src="javascript/waterTower.js"></script>
 </body>
 
 </html>
