--- a/components/waterTower/waterTower.html
+++ b/components/waterTower/waterTower.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section>
-            <svg id="watertower-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -200 566.99 2029.19"> <!-- original viewbox: 0 0 566.99 1829.19 -->
+            <svg id="watertower-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -200 766.99 2029.19"> <!-- original viewbox: 0 0 566.99 1829.19 -->
               <defs>
                 <clipPath id="clip-path">
                   <path class="cls-1" d="M538,977.62c0,64.69-70.78,104-126.12,117.12-46.21,11-64.44,13-127.88,13s-81.67-2-127.88-13C100.8,1081.61,30,1042.31,30,977.62V318.89c0-64.68,70.78-104,126.12-117.12,46.21-11,64.44-13,127.88-13s81.67,2,127.88,13C467.24,214.91,538,254.21,538,318.89Z"/>
@@ -22,7 +22,7 @@
               <g id="watertower-container" data-name="Laag 2">
                 <g id="Laag_1-2" data-name="Laag 1">
                   <g id="watertower">
-                    <g id="railing_back">
+                    <g id="railing_back" transform="translate(0,15)">
                       <path class="cls-2" d="M8,945.45c3.56.62,8,1.14,13.32,1.55,13.08,1,32.3,1.49,60.48,1.49,22.94,0,50.44-.31,79.55-.64,36.53-.4,77.94-.87,121.39-.87s84.84.47,121.38.87c29.11.33,56.61.64,79.55.64,28.19,0,47.41-.47,60.48-1.49,5.36-.41,9.76-.92,13.32-1.55v26.88c-5.11,2-23.43,6.94-85.52,11.17C420.07,987,352.87,989,282.74,989s-137.33-2-189.22-5.48C31.43,979.27,13.11,974.34,8,972.33V945.45m557.47-12.26c0,5.83-31.23,7.3-81.8,7.3-51.24,0-122.34-1.51-200.93-1.51S133,940.49,81.8,940.49C31.24,940.49,0,939,0,933.19v42.53C0,987.46,126.59,997,282.74,997s282.73-9.52,282.73-21.26V933.19Z"/>
                       <path class="cls-2" d="M534.27,923.47H538l-3.31.06h0Z"/>
                       <path class="cls-2" d="M534.71,923.53H538s-.38.12-1.22.32l-2.11-.32Z"/>
@@ -42,7 +42,7 @@
                         <rect class="cls-7" x="28.54" y="188.81" width="510.95" height="369.7"/> -->
                       </g>
                     </g>
-                    <g id="railing_front">
+                    <g id="railing_front" transform="translate(0,15)">
                       <g>
                         <path class="cls-2" d="M282.74,919.92c70.13,0,137.33,2,189.21,5.49,62.09,4.23,80.41,9.15,85.52,11.17v25.75c-3.7-1-8-1.91-12.82-2.77-14.5-2.58-35.16-4.88-61.39-6.86-53.59-4-124.81-6.25-200.52-6.25s-146.93,2.22-200.53,6.25c-26.23,2-46.89,4.28-61.39,6.86-4.83.86-9.12,1.75-12.82,2.77V936.58c5.11-2,23.43-6.94,85.52-11.17,51.89-3.54,119.08-5.49,189.22-5.49m0-8C126.59,911.92,0,921.44,0,933.19v42.53C0,964,126.59,954.45,282.74,954.45S565.47,964,565.47,975.72V933.19c0-11.75-126.58-21.27-282.73-21.27Z"/>
                         <path class="cls-8" d="M282.74,954.45C126.59,954.45,0,964,0,975.72c0,3.49,11.21,6.79,31.06,9.7,7.91-.15,23.7-5.37,75-9.7,36.87-3.12,92.1-5.79,176-5.79,83.37,0,141.69,2.67,181.38,5.79,47.69,3.74,68.47,8.14,73.42,9.34,18.36-2.82,28.67-6,28.67-9.34C565.47,964,438.89,954.45,282.74,954.45Z"/>
