--- a/components/map/map.html
+++ b/components/map/map.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 906.02 565.7">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -50 1006.02 665.7"> <!-- original 0 0 906.02 565.7 -->
               <defs>
               </defs>
               <title>US map</title>
