--- a/components/waterSupply/styles/waterSupply.css
+++ b/components/waterSupply/styles/waterSupply.css
@@ -1,24 +1,52 @@
-.cls-1, .cls-3, .cls-4 {
+.cls-1,
+.cls-2,
+.cls-4 {
     fill: none;
 }
 
+.cls-1,
 .cls-2 {
-    clip-path: url(#clip-path);
-}
-
-.cls-3, .cls-4 {
     stroke: #fff;
     stroke-miterlimit: 10;
 }
 
-.cls-3 {
+.cls-1 {
     stroke-width: 45px;
 }
 
-.cls-4 {
+.cls-2 {
     stroke-width: 25px;
 }
 
-.cls-5 {
+.crank-handle {
+    fill: black;
+}
+
+#water-drop-group {
+    transform: translate(238.83px, 710px);
+}
+
+#water-drop-group .scale-group {
+    transform-origin: left top;
+}
+
+#water-drop {
+    fill: #55d911;
+}
+
+#water-drop-text {
     fill: #fff;
+    text-anchor: middle;
+    font-size: 2em;
+    font-family: 'dinbold';
+    font-weight: 700;
+}
+
+html, body {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.crank-handle {
+    cursor: pointer;
 }
