--- a/components/waterSupply/waterSupply.html
+++ b/components/waterSupply/waterSupply.html
@@ -12,33 +12,34 @@
 <body>
     <main>
         <section>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1725.71 983.69">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2297.78 1709">
             <defs>
-                <clipPath id="clip-path" transform="translate(-162.59 -0.31)">
-                  <rect class="cls-1" width="1897.07" height="984"/>
-                </clipPath>
-              </defs>
-              <title>water_supply</title>
-              <g id="Laag_2" data-name="Laag 2">
-                <g id="Laag_1-2" data-name="Laag 1">
-                  <g class="cls-2">
+            </defs>
+            <title>Water supply</title>
+            <g id="water-supply-group" data-name="Laag 2">
+                <g id="water-supply-container" data-name="Laag 1">
                     <g>
-                      <g>
-                        <path class="cls-3" d="M185.09,984h0a79.5,79.5,0,0,1,79.5-79.5H1613c139.63,0,252.83-113.19,252.83-252.83V550.18c0-139.64-113.2-252.83-252.83-252.83H727.71" transform="translate(-162.59 -0.31)"/>
-                        <line class="cls-4" x1="156.23" y1="904.19" x2="156.23" y2="810.16"/>
-                        <path class="cls-5" d="M384.38,859.29c-2.56-2-5.19-3.73-7.84-5.44s-5.33-3.34-8-4.93q-8.11-4.71-16.44-8.82a360.93,360.93,0,0,0-34-14.64,370.07,370.07,0,0,0-35.27-11.28q-9-2.37-18.19-4.17c-3.07-.59-6.15-1.14-9.28-1.59s-6.26-.86-9.47-1.07a18.8,18.8,0,0,1,2.48-37.52,18.58,18.58,0,0,1,10.16,3.81c2.56,2,5.19,3.71,7.84,5.42s5.34,3.32,8,4.9q8.12,4.69,16.44,8.82a370.18,370.18,0,0,0,34,14.69,360.76,360.76,0,0,0,35.25,11.33q9,2.38,18.19,4.17c3.07.57,6.16,1.12,9.29,1.57s6.26.85,9.48,1a18.83,18.83,0,1,1-12.64,33.71Z" transform="translate(-162.59 -0.31)"/>
-                        <path class="cls-5" d="M240.62,825.58c3.21-.19,6.36-.59,9.48-1s6.21-1,9.29-1.57q9.19-1.79,18.18-4.17a359.89,359.89,0,0,0,35.25-11.33,369,369,0,0,0,34-14.69q8.32-4.12,16.45-8.82c2.69-1.58,5.38-3.19,8-4.9s5.28-3.47,7.84-5.42a18.8,18.8,0,1,1,12.64,33.71c-3.21.21-6.35.61-9.47,1.07s-6.21,1-9.28,1.59q-9.19,1.8-18.18,4.17a369.16,369.16,0,0,0-35.27,11.28,359.81,359.81,0,0,0-34,14.64q-8.32,4.13-16.44,8.82c-2.7,1.59-5.38,3.2-8,4.93s-5.28,3.48-7.83,5.44a18.82,18.82,0,1,1-12.64-33.71Z" transform="translate(-162.59 -0.31)"/>
-                      </g>
-                      <path class="cls-3" d="M727.71,297.35H536.84C397.21,297.35,284,184.16,284,44.53V.31" transform="translate(-162.59 -0.31)"/>
+                        <g>
+                            <path class="cls-1" d="M355.92,709.46h0a79.5,79.5,0,0,1,79.5-79.5H1927.3c139.63,0,252.82-113.19,252.82-252.82V275.64c0-139.63-113.19-252.83-252.82-252.83H0"/>
+                            <line class="cls-2" x1="489.65" y1="629.96" x2="489.65" y2="535.93"/>
+                            <path class="crank-handle" d="M555.21,584.75c-2.55-2-5.18-3.73-7.83-5.44s-5.33-3.34-8-4.93q-8.11-4.7-16.44-8.82a360.93,360.93,0,0,0-34-14.64,369.16,369.16,0,0,0-35.27-11.28q-9-2.37-18.18-4.17c-3.08-.58-6.16-1.14-9.28-1.59s-6.26-.86-9.48-1.07a18.8,18.8,0,1,1,12.65-33.71c2.56,1.95,5.19,3.72,7.84,5.42s5.33,3.32,8,4.91q8.12,4.68,16.45,8.81c11.1,5.51,22.45,10.34,34,14.7a366.25,366.25,0,0,0,35.25,11.33q9,2.37,18.19,4.16c3.08.58,6.16,1.13,9.29,1.57s6.26.85,9.48,1a18.82,18.82,0,1,1-12.64,33.7Z"/>
+                            <path class="crank-handle" d="M411.45,551.05c3.22-.2,6.36-.6,9.48-1s6.21-1,9.29-1.57q9.21-1.78,18.19-4.16a366.25,366.25,0,0,0,35.25-11.33c11.53-4.36,22.88-9.19,34-14.7q8.33-4.12,16.44-8.81c2.7-1.59,5.38-3.2,8-4.91s5.29-3.47,7.85-5.42a18.8,18.8,0,1,1,12.64,33.71c-3.22.21-6.36.61-9.48,1.07s-6.2,1-9.28,1.59q-9.2,1.8-18.18,4.17a369.16,369.16,0,0,0-35.27,11.28,360.93,360.93,0,0,0-34,14.64q-8.33,4.13-16.44,8.82c-2.69,1.59-5.38,3.21-8,4.93s-5.27,3.48-7.83,5.44a18.82,18.82,0,1,1-12.64-33.7Z"/>
+                        </g>
+                        <!-- <rect class="cls-4" x="2.45" width="2295.33" height="709.46" /> -->
                     </g>
-                  </g>
                 </g>
-              </g>
+                <g id="water-drop-group">
+                    <g class="scale-group" transform="translate(118.075, 0) scale(0, 0)">
+                        <path id="water-drop" d="M118.07,0c9.84,0,16.4,86.56,68.1,139,36.38,36.92,50,80.85,50,107A118.08,118.08,0,0,1,0,246c0-26.1,13.6-70,50-107C101.67,86.56,108.24,0,118.07,0Z"/>
+                        <text id="water-drop-text" x="118.075" y="240.54" dy="10">1 + 1 = ?</text>
+                    </g>
+                </g>
+            </g>
             </svg>
         </section>
     </main>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <!-- <script type="text/javascript" src="javascript/waterSupply.js"></script> -->
+    <script type="text/javascript" src="javascript/waterSupply.js"></script>
 </body>
 
 </html>
