--- a/components/waterTower/styles/waterTower.scss
+++ b/components/waterTower/styles/waterTower.scss
@@ -76,7 +76,8 @@ html {
             section {
                 svg {
                     display: block; // remove the extra space below the svg.
-                    max-height: 100vh;
+                    // max-height: 100vh;
+                    width: 100vw;
                 }
                 margin: 0 3rem;
             }
