color fix while loading

--- a/components/map/styles/map.scss
+++ b/components/map/styles/map.scss
@@ -27,3 +27,9 @@ body {
 svg {
     max-height: 61vh;
 }
+
+
+// render the map white, while loading the content
+#map-container.not-loaded path {
+    fill: white;
+}
