--- a/components/waterTower/waterTower.html
+++ b/components/waterTower/waterTower.html
@@ -18,7 +18,7 @@
                   <path class="cls-1" d="M538,977.62c0,64.69-70.78,104-126.12,117.12-46.21,11-64.44,13-127.88,13s-81.67-2-127.88-13C100.8,1081.61,30,1042.31,30,977.62V318.89c0-64.68,70.78-104,126.12-117.12,46.21-11,64.44-13,127.88-13s81.67,2,127.88,13C467.24,214.91,538,254.21,538,318.89Z"/>
                 </clipPath>
               </defs>
-              <title>watertower</title>
+              <title>Watertower</title>
               <g id="watertower-container" data-name="Laag 2">
                 <g id="Laag_1-2" data-name="Laag 1">
                   <g id="watertower">
