--- a/components/map/map.html
+++ b/components/map/map.html
@@ -15,9 +15,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -50 1006.02 665.7"> <!-- original 0 0 906.02 565.7 -->
               <defs>
               </defs>
-              <title>US map</title>
+              <!-- <title>US map</title> No label for the titel because of the map information -->
               <g id="map-group" data-name="Laag 2">
-                <g id="map-container">
+                <g id="map-container" class="not-loaded">
                   <path id="FL" class="cls-1" d="M738.42,432l2.26,7.32,3.73,9.74,5.34,9.37,3.72,6.31,4.85,5.5,4,3.71,1.61,2.91-1.13,1.3L762,479.4l2.91,7.44,2.91,2.91,2.59,5.33L774,500.9l4.52,8.25,1.3,7.59.48,12,.65,1.77-.32,3.4-2.43,1.29.32,1.94-.64,1.94.32,2.43.49,1.94-2.75,3.23-3.07,1.46-3.88.16-1.46,1.61-2.42,1-1.3-.48-1.13-1-.32-2.91-.81-3.4-3.4-5.17-3.55-2.26-3.88-.33-.81,1.3-3.07-4.37-.65-3.55-2.58-4-1.78-1.14-1.62,2.11-1.78-.33-2.1-5-2.91-3.88-2.91-5.33L727.92,508l-3.55-3.71,2.1-2.43,3.23-5.5-.16-1.61-4.53-1-1.61.64.32.65,2.59,1-1.46,4.53-.81.48-1.77-4-1.3-4.85-.32-2.75,1.45-4.68V475.2L719,471.48l-1.29-3.07-5.17-1.3-1.94-.64L709,463.88l-3.39-1.62-1.14-3.39-2.74-1-2.43-3.72-4.2-1.45-2.91-1.46h-2.59l-4,.81-.16,1.94.81,1-.49,1.13-3.07-.16-3.72,3.56-3.56,1.94H671.5l-3.23,1.29L668,460l-1.62-1.94-2.91-1.13-1.61-1.46-8.09-3.88-7.6-1.77-4.36.64-6,.49-6,2.1-3.48.61-.24-8.05-2.59-1.94-1.78-1.78.33-3.07,10.18-1.29,25.54-2.91,6.79-.65,5.44.28,2.59,3.88,1.45,1.46,8.1.51,10.82-.64,21.51-1.3,5.45-.67,5.11.2.42,2.91,2.24.81.23-4.63-1.53-4.17,1.31-1.44,5.56.45ZM751,564.35l2.43-.64,1.29-.25,1.46-2.34,2.34-1.62,1.29.49,1.7.32.41,1.05-3.48,1.21L754.2,564l-2.35,1.21Zm13.5-5,1.21,1,2.75-2.1,5.34-4.2,3.72-3.88,2.5-6.63,1-1.7.16-3.39-.72.48-1,2.83L778,546.41l-3.23,5.25-4.37,4.21L767,557.8Z"/>
                   <path id="NH" class="cls-1" d="M859.4,135.23l.87-1.08,1.09-3.29-2.54-.91-.49-3.07-3.88-1.14-.32-2.74-7.28-23.44L842.25,85h-.89l-.65,1.61-.65-.48-1-1-1.45,1.94,0,5,.31,5.67,1.94,2.75v4l-3.72,5.06-2.58,1.13v1.13l1.13,1.78v8.57l-.81,9.22-.16,4.85,1,1.29-.16,4.53-.49,1.77,1,.71,16.79-4.42,2.17-.6,1.85-2.78Z"/>
                   <g id="MI">
