--- a/components/waterTower/styles/waterTower.scss
+++ b/components/waterTower/styles/waterTower.scss
@@ -77,6 +77,7 @@ html {
                 svg {
                     display: block; // remove the extra space below the svg.
                     // max-height: 100vh;
+                    height: 100vh;
                     width: 100vw;
                 }
                 margin: 0 3rem;
