--- a/styles/index.scss
+++ b/styles/index.scss
@@ -125,14 +125,15 @@ main {
                     display: block;
                     height: 1.5rem;
                 }
-                height: 15em;
-                width: 20em;
+                height: 17em;
+                width: 30em;
                 > h3 {
                     padding: 0 2rem 1rem 2rem;
                     text-align: center;
                 }
-                > p {
+                > p, > a {
                     padding: 0 2rem 1rem 2rem;
+                    line-height: 1.2em;
                 }
             }
         }
