--- a/components/map/styles/map.scss
+++ b/components/map/styles/map.scss
@@ -4,32 +4,58 @@
   stroke-width: 0.75px;
 }
 
-#map-hover-info {
-    pointer-events: none;
-}
-
-
-#map-hover-info {
-    // $duration: 0.3s;
-    // -webkit-transition: all $duration; /* Safari */
-    // transition: all $duration;
-}
 
 body {
     padding: 15vw 15vw 15vw 0;
+    svg {
+        max-height: 61vh;
+        #legend-gradient {
+            .stop1 {
+                stop-color: #55d911;
+            }
+            .stop2 {
+                stop-color: #0080ff;
+            }
+        }
+        #legend {
+
+            text {
+                fill: black;
+                font-size: 1.4em;
+                text-anchor: middle;
+            }
+            > g > rect {
+                &:nth-child(1) {
+                    fill: #55d911;
+                }
+
+
+                &:nth-child(2) {
+                    fill: #55d911;
+                    fill: url(#legend-gradient);
+                    // https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Gradients
+                }
+                &:nth-child(3) {
+                    fill: #0080ff;
+                }
+            }
+            > rect {
+                fill: white;
+            }
+        }
+        // render the map white, while loading the content
+        #map-container.not-loaded path {
+            fill: white;
+        }
+
+        #map-hover-info {
+            // don't trigger any events for this element and it's children
+            pointer-events: none;
+        }
+    }
 }
 
 
 * { // fixing a strange scroll effect on one of the events
     overflow: hidden;
-}
-
-svg {
-    max-height: 61vh;
-}
-
-
-// render the map white, while loading the content
-#map-container.not-loaded path {
-    fill: white;
 }
