--- a/styles/index.css
+++ b/styles/index.css
@@ -147,3 +147,54 @@ main > section #second-content-section #information-about-subject > p, main > se
     padding: 0 2rem 1rem 2rem;
     line-height: 1.2em;
 }
+
+main #third-content-section {
+    overflow: hidden;
+}
+
+main #third-content-section #toothbrush {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: -1.7rem;
+    width: 20rem;
+}
+
+main #third-content-section section ul {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+}
+
+main #third-content-section section ul li {
+    flex-shrink: 0.5;
+    display: block;
+    height: 10rem;
+    width: 10rem;
+    padding: 3rem;
+    position: relative;
+}
+
+main #third-content-section section ul li > * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+main #third-content-section section ul li object {
+    height: 100%;
+    width: 100%;
+}
+
+main #third-content-section section ul li h4 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    pointer-events: none;
+}
