--- a/styles/index.scss
+++ b/styles/index.scss
@@ -142,4 +142,54 @@ main {
             }
         }
     }
+    #third-content-section {
+        overflow: hidden;
+        #toothbrush {
+            pointer-events: none;
+            position: absolute;
+            top: 0;
+            left: -1.7rem;
+            width: 20rem;
+        }
+        section {
+            ul {
+                margin: 0;
+                display: flex;
+                flex-wrap: wrap;
+                width: 100vw;
+                li {
+
+                    flex-shrink: 0.5;
+                    display: block;
+                    height: 10rem;
+                    width: 10rem;
+                    padding: 3rem;
+                    position: relative;
+
+                    > * {
+                        -webkit-touch-callout: none;
+                        -webkit-user-select: none;
+                        -khtml-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
+                    }
+
+                    object {
+                        height: 100%;
+                        width: 100%;
+                    }
+
+                    h4 {
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 100%;
+                        text-align: center;
+                        pointer-events: none; // else you will select the text during the brushing
+                    }
+                }
+            }
+        }
+    }
 }
