--- a/styles/index.scss
+++ b/styles/index.scss
@@ -167,12 +167,12 @@ main {
                     position: relative;
 
                     > * {
-                        -webkit-touch-callout: none;
-                        -webkit-user-select: none;
-                        -khtml-user-select: none;
-                        -moz-user-select: none;
-                        -ms-user-select: none;
-                        user-select: none;
+                        // -webkit-touch-callout: none;
+                        // -webkit-user-select: none;
+                        // -khtml-user-select: none;
+                        // -moz-user-select: none;
+                        // -ms-user-select: none;
+                        // user-select: none;
                     }
 
                     object {
