--- a/styles/index.css
+++ b/styles/index.css
@@ -188,4 +188,10 @@ main #third-content-section section ul li h4 {
     width: 100%;
     text-align: center;
     pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
