--- a/styles/index.scss
+++ b/styles/index.scss
@@ -166,14 +166,7 @@ main {
                     padding: 3rem;
                     position: relative;
 
-                    > * {
-                        // -webkit-touch-callout: none;
-                        // -webkit-user-select: none;
-                        // -khtml-user-select: none;
-                        // -moz-user-select: none;
-                        // -ms-user-select: none;
-                        // user-select: none;
-                    }
+
 
                     object {
                         height: 100%;
@@ -187,6 +180,12 @@ main {
                         width: 100%;
                         text-align: center;
                         pointer-events: none; // else you will select the text during the brushing
+                        -webkit-touch-callout: none;
+                        -webkit-user-select: none;
+                        -khtml-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                        user-select: none;
                     }
                 }
             }
