update selection toothbrush

--- a/styles/index.css
+++ b/styles/index.css
@@ -154,6 +154,12 @@ main #third-content-section {
 
 main #third-content-section #toothbrush {
     pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     position: absolute;
     top: 0;
     left: -1.7rem;
