--- a/styles/index.scss
+++ b/styles/index.scss
@@ -146,6 +146,12 @@ main {
         overflow: hidden;
         #toothbrush {
             pointer-events: none;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
             position: absolute;
             top: 0;
             left: -1.7rem;
