--- a/styles/index.css
+++ b/styles/index.css
@@ -166,6 +166,10 @@ main #third-content-section #toothbrush {
     width: 20rem;
 }
 
+main #third-content-section > p {
+    padding: 1rem 0 1rem 1rem;
+}
+
 main #third-content-section section ul {
     margin: 0;
     display: flex;
