--- a/styles/index.css
+++ b/styles/index.css
@@ -184,16 +184,21 @@ main #third-content-section section ul li {
     display: block;
     height: 10rem;
     width: 10rem;
-    padding: 3rem;
-    position: relative;
 }
 
-main #third-content-section section ul li object {
+main #third-content-section section ul li section {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+    padding: 3rem;
+}
+
+main #third-content-section section ul li section object {
     height: 100%;
     width: 100%;
 }
 
-main #third-content-section section ul li h4 {
+main #third-content-section section ul li section h4 {
     position: absolute;
     bottom: 0;
     left: 0;
